--- a/Clase6/package.json
+++ b/Clase6/package.json
@@ -1,7 +1,6 @@
 {
   "name": "clase6",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -13,5 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
