--- a/ProyectoFinalSegundaEntrega/package.json
+++ b/ProyectoFinalSegundaEntrega/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "proyectofinalsegundaentrega",
+  "name": "primerentregaproyectofinal",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Coder House - Desarrollo Backend - curso 43495",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -11,9 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.3.0",
-    "mongoose": "^6.8.0",
+    "firebase-admin": "^11.4.1",
+    "mongoose": "^6.8.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
