--- a/Clase22/package.json
+++ b/Clase22/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "faker": "^5.5.3",
+    "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.4"
   }
 }
