--- a/Clase22/package.json
+++ b/Clase22/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "desafio9",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
-    "faker": "^5.5.3",
-    "mongoose": "^6.8.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.20",
-    "normalizr": "^3.6.2",
-    "socket.io": "^4.5.4"
-  }
+    "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
+    "faker": "^5.0.0",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "normalizr": "^3.6.1",
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.4.0"
+  },
+  "name": "Clase 22",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
