--- a/TerceraEntrega/.env
+++ b/TerceraEntrega/.env
@@ -1,2 +1,5 @@
-MONGO_STORE_URI = 'mongodb+srv://nahuelmf:nawueh0731@cluster0.irezwt9.mongodb.net/test'
-MONGO_DB_URI = 'mongodb+srv://nahuelmf:nawueh0731@cluster0.irezwt9.mongodb.net/test'
+PORT=8080
+MODE='dev'
+MONGO_URL='mongodb+srv://nahuelmf:nawueh0731@cluster0.irezwt9.mongodb.net/test'
+
+
