--- a/TerceraEntrega/package.json
+++ b/TerceraEntrega/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "terceraentrega",
-  "version": "1.0.0",
-  "description": "Tercera entrega proyecto e-commerce",
-  "main": "server.js",
+  "name": "tercera entrega",
+  "version": "0.0.0",
+  "description": "tercera entrega",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Nahuel Figueroa",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "bcrypt-nodejs": "^0.0.3",
-    "bootstrap-icons": "^1.8.1",
+    "autocannon": "^7.10.0",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.6",
-    "ejs-mate": "^4.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.18",
+    "faker": "^5.5.3",
+    "moment": "^2.29.4",
+    "mongoose": "^6.8.2",
+    "nodemailer": "^6.9.1",
+    "normalizr": "^3.6.2",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.3",
+    "twilio": "^4.7.2",
+    "winston": "^3.8.2",
+    "yargs": "^17.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
