--- a/Clase38/.env
+++ b/Clase38/.env
@@ -1,1 +1,3 @@
-MONGO_URL=mongodb+srv://nahuelmf:nawueh0731@cluster0.irezwt9.mongodb.net/test
+PORT=8080
+MODE='dev'
+MONGO_URL='mongodb+srv://nahuelmf:nawueh0731@cluster0.irezwt9.mongodb.net/test'
