--- a/Clase38/package.json
+++ b/Clase38/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "desafio10--login",
-  "version": "1.0.0",
-  "description": "Login por formulario",
-  "main": "server.js",
+  "name": "test",
+  "version": "0.0.0",
+  "description": "Clase 38",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Nahuel Figueroa",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
-    "child_process": "^1.0.2",
+    "autocannon": "^7.10.0",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "flash": "^1.1.0",
-    "mongoose": "^6.3.5",
-    "morgan": "^1.10.0",
-    "next": "^13.2.3",
-    "nodemon": "^2.0.16",
+    "faker": "^5.5.3",
+    "moment": "^2.29.4",
+    "mongoose": "^6.8.2",
+    "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.1",
-    "yargs": "^17.5.1"
+    "socket.io": "^4.5.3",
+    "winston": "^3.8.2",
+    "yargs": "^17.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
