--- a/Clase38/package.json
+++ b/Clase38/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "test",
+  "name": "Clase 38",
   "version": "0.0.0",
-  "description": "Clase 38",
+  "description": "Division de capas",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "Nahuel Figueroa",
   "license": "ISC",
   "dependencies": {
-    "autocannon": "^7.10.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
@@ -18,15 +16,15 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "faker": "^5.5.3",
+    "knex": "^0.21.21",
     "moment": "^2.29.4",
-    "mongoose": "^6.8.2",
-    "normalizr": "^3.6.2",
+    "mongoose": "^7.0.1",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.3",
-    "winston": "^3.8.2",
-    "yargs": "^17.6.2"
+    "sqlite3": "^5.1.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
